# Dyson-Marvin

./: CMakeLists.txt  README.md
include/: Daemon.hpp
java_exemple/: Main.java
src/: Daemon.cpp  main.cpp
src/tools/: SenderMail.cpp  SenderMail.h  curlsmtp.cpp  ustd_string.h
